--- a/MusicDiscoveryPhysiology.ipynb
+++ b/MusicDiscoveryPhysiology.ipynb
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "0otMwI94UK6Q"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -78,7 +78,7 @@
         "id": "EI7rn-lQknmM",
         "outputId": "4fd195ef-854a-4ed5-ea8c-0152368b6d6f"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +100,7 @@
       "metadata": {
         "id": "lZeHcPG6kprC"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -126,7 +126,7 @@
       "metadata": {
         "id": "XFHDvojcl-uu"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -179,7 +179,7 @@
         },
         "outputId": "529769bd-7974-4a30-e9c4-b4cf3bbeec19"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,7 +205,7 @@
         },
         "outputId": "eecdc429-ae71-4faa-ec8c-abfce811b689"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -264,7 +264,7 @@
         },
         "outputId": "4c15a9ff-340f-46d7-dd00-c1cfa574371a"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -357,7 +357,7 @@
         },
         "outputId": "224a9410-a0bc-40ca-b485-6eb7c5325246"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -409,7 +409,7 @@
         },
         "outputId": "5dabaf9d-6341-40f0-d4ce-d7b19a0eb546"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -481,7 +481,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": null,
       "metadata": {
         "id": "-rlcZ_SCn0b0"
       },
@@ -493,7 +493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": null,
       "metadata": {
         "id": "rdnvXJcloCPp",
         "colab": {
@@ -562,7 +562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": null,
       "metadata": {
         "id": "0c1B9fUMLFHG"
       },
@@ -573,7 +573,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": null,
       "metadata": {
         "id": "EnJDHCbfW1DK"
       },
@@ -586,7 +586,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": null,
       "metadata": {
         "id": "kFLs852klTPj",
         "colab": {
@@ -644,7 +644,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 118,
+      "execution_count": null,
       "metadata": {
         "id": "C4pwkajNghpx"
       },
@@ -657,7 +657,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": null,
       "metadata": {
         "id": "TSSedF6Sg1wA"
       },
@@ -687,7 +687,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": null,
       "metadata": {
         "id": "_5fP5LtIho42",
         "colab": {
@@ -760,7 +760,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": null,
       "metadata": {
         "id": "qH3C8ZKwGsh-"
       },
@@ -789,7 +789,7 @@
       "metadata": {
         "id": "eoxchtv-iNOq"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -806,7 +806,7 @@
         "id": "_RbibpvQjVpU",
         "outputId": "6c9b30cf-7f8e-4ad5-8d30-4b17ec83274b"
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -846,7 +846,7 @@
       "metadata": {
         "id": "lEQwrCuZnos9"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -865,7 +865,7 @@
         "id": "DLjTSdtYotHa",
         "outputId": "202e95f2-be0d-4017-fc3e-425d98925a8b"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -900,7 +900,7 @@
         "id": "9mK75yB3qzMx",
         "outputId": "df80490e-0f90-4c81-c249-41b964f8ff9d"
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -944,7 +944,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": null,
       "metadata": {
         "id": "UFSF0YTDHd8K",
         "colab": {
@@ -991,7 +991,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": null,
       "metadata": {
         "id": "qwI11xXNDhfN",
         "colab": {
@@ -1037,7 +1037,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": null,
       "metadata": {
         "id": "pGr6aZE4DQPl",
         "colab": {
@@ -1101,7 +1101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 135,
+      "execution_count": null,
       "metadata": {
         "id": "MMlHv1z5hwPr",
         "colab": {
@@ -1130,7 +1130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": null,
       "metadata": {
         "id": "1IhyjIceihVF",
         "colab": {
@@ -1162,7 +1162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": null,
       "metadata": {
         "id": "geQl_uyTIrL8",
         "colab": {
@@ -1190,7 +1190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 138,
+      "execution_count": null,
       "metadata": {
         "id": "tNsOgXcsI6tI",
         "colab": {
@@ -1236,7 +1236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": null,
       "metadata": {
         "id": "ELLjdYvxxX3T"
       },
@@ -1249,7 +1249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 140,
+      "execution_count": null,
       "metadata": {
         "id": "bxs-c04ahmHD"
       },
@@ -1260,7 +1260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": null,
       "metadata": {
         "id": "FhJ5PK_wr36c",
         "colab": {
@@ -1294,7 +1294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 148,
+      "execution_count": null,
       "metadata": {
         "id": "CgiWjfFYBVuv",
         "colab": {
@@ -1336,17 +1336,29 @@
       },
       "source": [
         "### 3.2.3 Predicting pupil response from liking and familiarity with linear mixed effects models\n",
-        "The relationship between pupil size and liking and/or familiarity ratings can also be tested without recoding the variables. Here, we use linear mixed effects modelling to test whether liking and familiarity predict pupil size. Participant ID is included here as a random effect."
+        "The relationship between pupil size and liking and/or familiarity ratings can also be tested without recoding the variables. Here, we use linear mixed effects modelling to test whether liking and familiarity predict pupil size.\n",
+        "\n",
+        "Linear mixed effects models (LMM) are useful for analyzing data with hierarchical structures (e.g., participants/conditions/stimuli). Models typically test the relationship between certain fixed effects and an outcome variable. Models can also include random effects, which account for variability in higher-level variables.\n",
+        "\n",
+        "LMM can be run with iterative testing to find the model that best explains the data. LMM can also be used for testing specific predicted effects (similar to an ANOVA). In this case, the formulation of the model is defined by the design of the experiment and hypotheses.\n",
+        "\n",
+        "In this analysis, we want to test for a potential effects of liking and familiarity on pupil size. We have already seen above that these variables change between sessions, so we might also account for effects of session. We have also already seen (in Section 3.1) that participants differed in their average pupil size. Participant ID can be defined as a random effect to account for these differences. The term \"(1|ID)\" will add a random intercept for each participant.\n",
+        "\n",
+        "Multicollinearity can be a problem for LMM, as it becomes difficult to estimate the individual contributions of each predictor and increases the risk of overfitting. There are different techniques for determining whether variables are too strongly correlated to be included together in the same model:\n",
+        "\n",
+        "*   Correlation analysis\n",
+        "*   Variance inflation factor (VIF) - measure of how much multicollinearity affects the variance of the estimated regression coefficients (VIF > 5 indicates critical multicollinearity)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 149,
+      "execution_count": 194,
       "metadata": {
         "id": "FN7sfquRKop3"
       },
       "outputs": [],
       "source": [
+        "# Find average pupil size per participant, session, & track\n",
         "pertrial <- aggregate(smooth.pupil ~ ID + spotify_id + session + liking + track_familiarity, allshort, mean)"
       ]
     },
@@ -1362,9 +1374,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "064eb38f-959b-4cf7-d37b-c2d6b245d148"
+        "outputId": "1f1e39e1-f214-4988-84f3-d83b67863953"
       },
-      "execution_count": 150,
+      "execution_count": 195,
       "outputs": [
         {
           "output_type": "stream",
@@ -1396,18 +1408,19 @@
     {
       "cell_type": "code",
       "source": [
+        "# Convert session to a factor and define contrasts\n",
         "pertrial$session <- factor(pertrial$session)\n",
         "contrasts(pertrial$session)<- c(-1, 1)"
       ],
       "metadata": {
         "id": "Fa3y9Ri9vO43"
       },
-      "execution_count": 164,
+      "execution_count": 196,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 165,
+      "execution_count": null,
       "metadata": {
         "id": "K3PTqxmEyuRJ",
         "colab": {
@@ -1458,14 +1471,15 @@
         }
       ],
       "source": [
-        "summary(model <- lmer(smooth.pupil ~ liking + track_familiarity + session + (1|ID),\n",
+        "# Run model 1, testing the effects of liking, track_familiarity, and session individually\n",
+        "summary(model1 <- lmer(smooth.pupil ~ liking + track_familiarity + session + (1|ID),\n",
         "              data = pertrial))"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "vif(model)"
+        "vif(model1)"
       ],
       "metadata": {
         "colab": {
@@ -1475,7 +1489,7 @@
         "id": "GdiaFmD6vGMF",
         "outputId": "1e7a4c14-5be3-40b7-ad83-0c1b617002f3"
       },
-      "execution_count": 166,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1501,7 +1515,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 167,
+      "execution_count": null,
       "metadata": {
         "id": "ErvHBwAeMTQd",
         "colab": {
@@ -1594,7 +1608,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 168,
+      "execution_count": null,
       "metadata": {
         "id": "9b8y5tWVQ4hv"
       },
@@ -1605,7 +1619,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 169,
+      "execution_count": null,
       "metadata": {
         "id": "kxExeQFTK4D2",
         "colab": {
@@ -1711,7 +1725,7 @@
         "id": "-bF1k5cNjzsA",
         "outputId": "8c40a68a-6890-4276-9bf7-b79360a7afbd"
       },
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1740,7 +1754,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 171,
+      "execution_count": null,
       "metadata": {
         "id": "pvxVF7vYMOXA"
       },
@@ -1752,7 +1766,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 172,
+      "execution_count": null,
       "metadata": {
         "id": "5lzULCmLMT1O",
         "colab": {
@@ -1823,12 +1837,12 @@
       "metadata": {
         "id": "vJh5ybawq8Ca"
       },
-      "execution_count": 173,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 174,
+      "execution_count": null,
       "metadata": {
         "id": "cUZmoMQPLKLB",
         "colab": {
@@ -1876,7 +1890,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 175,
+      "execution_count": null,
       "metadata": {
         "id": "NAN0rKQvSvQ_"
       },
@@ -1890,7 +1904,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 176,
+      "execution_count": null,
       "metadata": {
         "id": "-TadpiaPTAvq"
       },
@@ -1910,7 +1924,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 184,
+      "execution_count": null,
       "metadata": {
         "id": "jyZhcTVBWqH7",
         "colab": {
@@ -1944,7 +1958,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 185,
+      "execution_count": null,
       "metadata": {
         "id": "0xDWKOLAIG5w"
       },
@@ -1956,7 +1970,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 186,
+      "execution_count": null,
       "metadata": {
         "id": "aKjghUo3IQ0X",
         "colab": {
@@ -1989,7 +2003,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 187,
+      "execution_count": null,
       "metadata": {
         "id": "mh1IcvdZI8EK"
       },
@@ -2000,7 +2014,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 190,
+      "execution_count": null,
       "metadata": {
         "id": "eyCU7Ol1I3fX",
         "colab": {
@@ -2037,7 +2051,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 192,
+      "execution_count": null,
       "metadata": {
         "id": "LtJSD5evJWJv",
         "colab": {
@@ -2074,7 +2088,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 193,
+      "execution_count": null,
       "metadata": {
         "id": "MALHHkLPJcp2",
         "colab": {
@@ -2123,7 +2137,9 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "ybQEsxqhkEMA"
+        "ybQEsxqhkEMA",
+        "nMcPVrtKj-d0",
+        "WMBzDXC5HHA_"
       ],
       "include_colab_link": true
     },
